@@ -2,10 +2,13 @@ package com.bungaebowling.server.post.dto;
 
 import com.bungaebowling.server._core.utils.CursorRequest;
 import com.bungaebowling.server.post.Post;
+import com.bungaebowling.server.score.Score;
+import com.bungaebowling.server.user.User;
+import com.bungaebowling.server.user.rate.UserRate;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 public class PostResponse {
 
@@ -14,7 +17,7 @@ public class PostResponse {
         List<PostDto> posts
     ) {
         public static GetPostsDto of(CursorRequest nextCursorRequest, List<Post> posts) {
-            return new GetPostsDto(nextCursorRequest, posts.stream().map(PostDto::new).collect(Collectors.toList()));
+            return new GetPostsDto(nextCursorRequest, posts.stream().map(PostDto::new).toList());
         }
 
         public record PostDto(
@@ -91,23 +94,60 @@ public class PostResponse {
             CursorRequest nextCursorRequest,
             List<PostDto> posts
     ) {
+        public static GetParticipationRecordsDto of(CursorRequest nextCursorRequest, List<Post> posts, Map<Long, List<Score>> scores,
+                                                    Map<Long, List<User>> members, Map<Long, List<UserRate>> rates, Map<Long, Long> applicantIdMap) {
+            return new GetParticipationRecordsDto(
+                    nextCursorRequest,
+                    posts.stream().map(post ->
+                            new PostDto(
+                                    post,
+                                    scores.get(post.getId()),
+                                    members.get(post.getId()),
+                                    rates.get(post.getId()),
+                                    applicantIdMap.get(post.getId())
+                            )).toList()
+            );
+        }
+
         public record PostDto(
                 Long id,
+                Long applicantId,
                 String title,
                 LocalDateTime dueTime,
                 String districtName,
                 LocalDateTime startTime,
-                Integer currentNumber,
+                Long currentNumber,
                 Boolean isClose,
                 List<ScoreDto> scores,
                 List<MemberDto> members
         ) {
+            public PostDto(Post post, List<Score> scores, List<User> users, List<UserRate> rates, Long applicantId) {
+                this(
+                        post.getId(),
+                        applicantId,
+                        post.getTitle(),
+                        post.getDueTime(),
+                        post.getDistrictName(),
+                        post.getStartTime(),
+                        post.getCurrentNumber(),
+                        post.getIsClose(),
+                        scores.stream().map(ScoreDto::new).toList(),
+                        users.stream().map(user -> new MemberDto(user, rates)).toList()
+                );
+            }
+
             public record ScoreDto(
                     Long id,
                     Integer score,
                     String scoreImage
             ) {
-
+                public ScoreDto(Score score) {
+                    this(
+                            score.getId(),
+                            score.getScoreNum(),
+                            score.getAccessImageUrl()
+                    );
+                }
             }
 
             public record MemberDto(
@@ -116,7 +156,14 @@ public class PostResponse {
                     String profileImage,
                     Boolean isRated
             ) {
-
+                public MemberDto(User user, List<UserRate> rates) {
+                    this(
+                            user.getId(),
+                            user.getName(),
+                            user.getImgUrl(),
+                            rates.stream().anyMatch(rate -> rate.getUser().getId().equals(user.getId()))
+                    );
+                }
             }
         }
     }
